Fix overlapping text below pritam image

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -22,3 +22,9 @@
   border-radius: 10px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.26)
 }
+
+@media (max-width: 576px) {
+  .faq_content.collaps_style .card {
+    margin-top: 2em;
+  }
+}
